--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,8 @@
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Modalitäten</button>
             <div class="dropdown-menu" aria-labelledby="dropdownModalityButton">
               <a class="dropdown-item" href="{% url 'modalityCreate' %}">Neue Modalität</a>
-              <a class="dropdown-item" href="{% url 'modalities' %}">Modalitäten anzeigen</a>               
+              <a class="dropdown-item" href="{% url 'modalities' %}">Modalitäten anzeigen</a>   
+              <a class="dropdown-item" href="{% url 'worklistList' %}">Aufträge</a>               
             </div>
           </li>
 
