accession number and studies

--- a/templates/worklists/worklist_list.html
+++ b/templates/worklists/worklist_list.html
@@ -2,7 +2,17 @@
 
 {% block content %}
 <br>
-<h2>Worklist liste</h2>
+<h2>Aufträge</h2>
+<div style="margin-bottom:15px;">
+<div class="card">
+  <div class="card-body">
+   Hier werden die bestehenden Bildaufträge für die jeweiligen Modalitäten dargestellt.
+ Eine Modalität kann mit folgendem Link registriert werden.
+ <a href="{% url 'modalityCreate' %}" class="card-link">Modalität registrieren</a>
+  </div>
+</div>
+</div>
+
 {% for location in location_list %}
 
 <div class="card border-info mb-3 w-100" corresponding-location="{{ location.id }}">
@@ -19,11 +29,12 @@
             <div class="col">
               <h5 class="card-title">{{location.name}} {{ location.id}}</h5>
             </div>       
-
           </div>
         </div>
       </div>
     </div>
+<br>
+<div class="modality-container" corresponding-location="{{ location.id }}">
 {% for modality in modality_list %}
 {% if modality.associate_location.id == location.id %}
     <div class="accordion" id="accordion-{{ modality.id }}">
@@ -31,8 +42,8 @@
         <div class="card-header" id="heading-{{ modality.id }}">
           <h2 class="mb-0">
              
-            <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#wl-{{modality.id}}" aria-expanded="true" aria-controls="wl-{{modality.id}}">
-              {{ modality.ae_title}}
+            <button class="btn btn-block text-left" type="button" data-toggle="collapse" data-target="#wl-{{modality.id}}" aria-expanded="true" aria-controls="wl-{{modality.id}}">
+              Aufträge für Modalität {{ modality.ae_title}}:
             </button>
           </h2>
         </div>
@@ -47,10 +58,12 @@
         </div>
       </div>
     </div>
-{% endif %}
-{% endfor %}
+    {% endif %}
+    {% endfor %}
   </div>
   </div>
+  </div>
+ 
 {% endfor %}
 
 
@@ -67,11 +80,12 @@
      -->
 <script>
 $(document).ready(function(){
-  //for each div with class "card border-info mb-3 w-100":
-    //get location id from $this.attr.corresponding-location
-    //GET all worklists for location with id == location.id 
-    //$.get("/{ procent url " procent})
-  // make post request to curapacs
+   $("div[class='modality-container']").each(function (i) {
+     if ($.trim($(this).html()).length == 0) {
+       $(this).html('<p>Für diesen Standort wurden keine Modalitäten registriert.</p>');
+     }
+   });
+
   $("div[class='card border-info mb-3 w-100']").each(function (i) {  
       var location_id = $(this).attr("corresponding-location");
       console.log("Iterating in location " + location_id);
@@ -86,17 +100,50 @@ $(document).ready(function(){
                     var patient_name = worklist["PatientName"];
                     var study_id = worklist["StudyID"];
                     console.log("Iterating over worklist_entries for worklist with accession_number " + accession_number)
+                    $.get("/curapacs/study-by-accession-number/" + accession_number +"/statistics/", function(statisticsData){
+                        console.log("Statistics Data received " + statisticsData);
+                        if (statisticsData["status"] == "success"){
+                          var found_study_for_accession_number = true;
+                          var resource_uid = statisticsData["content"]["resource_uid"];
+                          var statistics_count_instances = statisticsData["content"]["statistics"]["CountInstances"];
+                          var statistics_count_series =  statisticsData["content"]["statistics"]["CountSeries"];
+                          $("div[class=modality-container][corresponding-location=" + location_id + "]").html("Added new data, will change after" + statistics_count_instances + " | " + statistics_count_series + " | " + resource_uid);
+                        } else {
+                          var found_study_for_accession_number = false;
+                        }
+                      });
                     worklist["ScheduledProcedureStepSequence"].forEach(function(worklist_entry, index){
+                      
                       var ae_title =  worklist_entry["ScheduledStationAETitle"];
                       var worklist_body_div = $("div[corresponding-modality-aetitle=" + ae_title + "]");
                       var modality_id = worklist_body_div.attr("corresponding-modality");
-                      var insert_html = '<div id="wl-' + modality_id + '" class="collapse show" aria-labelledby="heading-' + modality_id + '" data-parent="#accordion-' + modality_id + '"> <div class="card-body"> <ul> <li>'+ accession_number + '</li> </ul> </div> </div>';
-                      $("div[corresponding-modality-aetitle=" + ae_title + "]").append(insert_html);
+                      var insert_html = '<div id="wl-' +
+                                         + modality_id +
+                                         '" class="collapse show" aria-labelledby="heading-' +
+                                         modality_id + '" data-parent="#accordion-' +
+                                         modality_id + '"> <div class="card-body">\
+                                         <div class="card" style="width: 18rem;">\
+                                         <div class="card-body">\
+                                         <h6 class="card-subtitle mb-2 text-muted">\
+                                         Auftragsnummer</h6>\
+                                         <ul class="list-group list-group-flush">\
+                                         <li class="list-group-item"> ' +
+                                         accession_number +
+                                         '</li> </ul></div></div>\
+                                         </div> </div>';
                     });
                 });
               }
  
-            });
+            }).fail(function(){
+              console.log("Location " + location_id + " failed");
+              var existing_html = $("div[class=modality-container][corresponding-location=" + location_id + "]").html();
+              var prepend_message = "<p>Location timed out</p>";
+              $("div[class=modality-container][corresponding-location=" + location_id + "]").html(prepend_message + existing_html);
+              });
+              //div class="modality-container" corresponding-location="{{ location.id }}
+              // correspnding location id and add cancel img
+            
           });
 });
 
